--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,5 +1,4 @@
 <h1>This is the home page</h1>
 
-<button>
-  <a ui-sref="products">Go to products</a>
+<button ui-sref="products">Go to products
 </button>
