--- a/public/views/about.html
+++ b/public/views/about.html
@@ -2,7 +2,12 @@
   <div class="jumbotron">
     <div class="row">
       <div class="col-md-4 col-md-offset-4">
-        <h1>This is the home page</h1>
+
+
+        <div class="parallax"></div>
+        <h1>This is an about page</h1>
+        <div class="parallax"></div>
+        
       </div>
     </div>
   </div>
