--- a/public/views/products.html
+++ b/public/views/products.html
@@ -1,12 +1,20 @@
-<h1>This is the products page</h1>
-
-<div class="product-grid" ng-repeat="product in products">
-
+<div class="header_text">
+  <div class="jumbotron">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4">
+        <h1>This is the products page</h1>
+      </div>
+    </div>
+  </div>
 </div>
 
+<!-- <div class="product-grid" ng-repeat="product in products">
 
-<div ng-repeat="card in cards">
-  <img ng-src='{{card.image}}'>
-</div>
+</div> -->
 
-<button ui-sref="home">Go to home</button>
+<!-- <div class="jumbotron">
+  <div ng-repeat="card in cards">
+    <img ng-src='{{card.image}}'>
+  </div>
+
+</div> -->
