--- a/public/views/products.html
+++ b/public/views/products.html
@@ -8,9 +8,58 @@
   </div>
 </div>
 
-<!-- <div class="product-grid" ng-repeat="product in products">
+<div class="jumbotron">
+  <div ng-repeat="product in products">
+    <p>
+      {{product.name}} {{product.description}} {{product.cost}}
+    </p>
+  </div>
 
-</div> -->
+</div>
+<!-- <table class="table table-bordered table-striped table-responsive">
+<tr>
+<td>
+hello
+</td>
+<td>
+hello
+</td>
+<td>
+hello
+</td>
+<td>
+hello
+</td>
+</tr>
+<tr>
+<td>
+hello
+</td>
+<td>
+hello
+</td>
+<td>
+hello
+</td>
+<td>
+hello
+</td>
+</tr>
+<tr>
+<td>
+hello
+</td>
+<td>
+hello
+</td>
+<td>
+hello
+</td>
+<td>
+hello
+</td>
+</tr>
+</table> -->
 
 <!-- <div class="jumbotron">
   <div ng-repeat="card in cards">
