--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,9 +1,48 @@
 <div class="header_text">
-  <div class="jumbotron">
-    <div class="row">
-      <div class="col-md-4 col-md-offset-4">
-        <h1>This is the home page</h1>
-      </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+
+                <iframe  width="560" height="315" src="https://www.youtube.com/embed/Berf8Sy0SCI" frameborder="0" allowfullscreen></iframe>
+
+            </div>
+        </div>
     </div>
-  </div>
+</div>
+
+<div class="below_video_text">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <p>
+              Vermiculture is the process of using worms to decompose organic food waste, turning the waste into a nutrient-rich material capable of supplying necessary nutrients to help sustain plant growth.
+
+              Vermicomposting adds beneficial organisms to the soil. These microorganisms and soil fauna help break down organic materials and convert nutrients into a more available food form for plants.
+              Like composting, vermiculture composting is natures way of completing the recycling loop. Being born, living, dying, and being reborn again. Adding compost to soil aids in erosion control, promotes soil fertility, and stimulates healthy root development in plants.
+            </p>
+
+        </div>
+    </div>
+
+</div>
+<div class="bottom_contact">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+        <div>
+          <small>
+            Marcia's Vermiculture
+          </small>
+        </div>
+        <div>
+          <small>
+            8469 18th Street
+          </small>
+        </div>
+        <div>
+          <small>
+          Alta Loma CA, 91701
+        </small>
+        </div>
+
+        </div>
+    </div>
 </div>
