--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,8 @@
-<div class="header_text">
+<!-- //decided to go with one index.page, ui.router was messing things up -->
+
+
+
+<!-- <div class="header_text">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
@@ -45,4 +49,4 @@
 
         </div>
     </div>
-</div>
+</div> -->
