--- a/public/views/products.html
+++ b/public/views/products.html
@@ -1,4 +1,6 @@
-<div class="header_text">
+<!-- //decided to go with one index.page, ui.router was messing things up -->
+
+<!-- <div class="header_text">
   <div class="jumbotron">
     <div class="row">
       <div class="col-md-4 col-md-offset-4">
@@ -66,4 +68,4 @@ hello
     <img ng-src='{{card.image}}'>
   </div>
 
-</div> -->
+</div> --> -->
