--- a/public/styles/css/style.scss
+++ b/public/styles/css/style.scss
@@ -31,6 +31,18 @@ $almost-grey: rgb(201, 195, 201);
 }
 
 
+.pay {
+  form {
+    width: 100%;
+    position:absolute;
+    right: 0;
+
+  }
+}
+
+.total_cost {
+  font-weight: bold;
+}
 
 //////////////////////////////////////////////////
 body, html {
@@ -57,8 +69,9 @@ body, html {
   height: 50%;
   background-color: $tan;
 }
+
 .parallax {
-  background-image: 'public/images/maxresdefault.png';
+  background-image: './images/maxresdefault.png';
   height: 100%auto;
   background-attachment: fixed;
   background-position: center;
